--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "prettier-plugin-organize-imports": "^2.3.4",
     "prettier-plugin-pkg": "^0.13.2",
     "prettier-plugin-sh": "^0.11.0",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "vercel": "^25.1.0"
   },
   "packageManager": "yarn@3.2.1"
 }
