--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
     "node": "18.x"
   },
   "dependencies": {
-    "got": "^12.0.4"
+    "got": "^13.0.0"
   },
   "devDependencies": {
-    "@vercel/node": "^1.15.3",
-    "prettier": "^2.6.2",
-    "prettier-plugin-organize-imports": "^2.3.4",
-    "prettier-plugin-pkg": "^0.13.2",
-    "prettier-plugin-sh": "^0.11.0",
-    "typescript": "^4.6.4",
-    "vercel": "^25.1.0"
+    "@vercel/node": "^3.0.7",
+    "prettier": "3.0.3",
+    "prettier-plugin-organize-imports": "3.2.3",
+    "prettier-plugin-pkg": "0.18.0",
+    "prettier-plugin-sh": "0.13.1",
+    "typescript": "~5.2.2",
+    "vercel": "^32.5.0"
   },
   "packageManager": "yarn@4.0.0"
 }
