--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "valenciakit",
+  "type": "module",
   "private": true,
+  "packageManager": "yarn@4.5.3",
   "engines": {
     "node": "18.x"
   },
   "dependencies": {
-    "got": "^14.4.5"
+    "ky": "^1.7.2"
   },
   "devDependencies": {
+    "@types/geojson": "^7946.0.14",
     "@vercel/node": "^3.2.27",
     "prettier": "3.4.1",
     "prettier-plugin-organize-imports": "4.1.0",
@@ -15,6 +18,5 @@
     "prettier-plugin-sh": "0.14.0",
     "typescript": "~5.7.2",
     "vercel": "^39.1.2"
-  },
-  "packageManager": "yarn@4.5.3"
+  }
 }
