--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": false,
-    "noEmit": true
+    "noEmit": true,
+    "skipLibCheck": true
   }
 }
