--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
     "node": "22.x"
   },
   "dependencies": {
+    "cookie": "^1.0.2",
     "ky": "^1.8.1"
   },
   "devDependencies": {
     "@types/geojson": "^7946.0.16",
-    "@vercel/node": "^5.1.16",
-    "prettier": "3.5.3",
+    "@types/node": "^22.16.0",
+    "prettier": "3.6.2",
     "prettier-plugin-organize-imports": "4.1.0",
-    "prettier-plugin-pkg": "0.19.1",
-    "prettier-plugin-sh": "0.17.4",
+    "prettier-plugin-pkg": "0.21.1",
+    "prettier-plugin-sh": "0.18.0",
     "typescript": "~5.8.3",
-    "vercel": "^41.7.4"
+    "vercel": "^44.2.12"
   }
 }
