--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,1 @@
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
-
-# Swap the comments on the following lines if you wish to use zero-installs
-# Documentation here: https://yarnpkg.com/features/zero-installs
-#!.yarn/cache
-.pnp.*
-
-node_modules/
-.vercel
+out/
